# advent-of-code

./: Cargo.toml  README.md
2015/day01a/: Cargo.toml
2015/day01a/src/: main.rs
2015/day01b/: Cargo.toml
2015/day01b/src/: main.rs
2015/day02a/: Cargo.toml
2015/day02a/src/: main.rs
2015/day02b/: Cargo.toml
2015/day02b/src/: main.rs
2019/day01a/: Cargo.toml
2019/day01a/src/: main.rs
2019/day01b/: Cargo.toml
2019/day01b/src/: main.rs
2019/day02a/: Cargo.toml
2019/day02a/src/: main.rs
2019/day02b/: Cargo.toml
2019/day02b/src/: main.rs
2019/day03a/: Cargo.toml
2019/day03a/src/: main.rs
2019/day03b/: Cargo.toml
2019/day03b/src/: main.rs
2019/day04a/: Cargo.toml
2019/day04a/src/: main.rs
2019/day04b/: Cargo.toml
2019/day04b/src/: main.rs
2019/day05a/: Cargo.toml
2019/day05a/src/: main.rs
2019/day05b/: Cargo.toml
2019/day05b/src/: main.rs
2019/day06a/: Cargo.toml
2019/day06a/src/: main.rs
2019/day06b/: Cargo.toml
2019/day06b/src/: main.rs
2019/day07a/: Cargo.toml
2019/day07a/src/: main.rs
2019/day07b/: Cargo.toml
2019/day07b/src/: main.rs
2019/day08a/: Cargo.toml
2019/day08a/src/: main.rs
2019/day08b/: Cargo.toml
2019/day08b/src/: main.rs
2019/day09a/: Cargo.toml
2019/day09a/src/: main.rs
2019/day09b/: Cargo.toml
2019/day09b/src/: main.rs
2019/day10a/: Cargo.toml
2019/day10a/src/: main.rs
2019/day10b/: Cargo.toml
2019/day10b/src/: main.rs
2019/day11a/: Cargo.toml
2019/day11a/src/: main.rs
2019/day11b/: Cargo.toml
2019/day11b/src/: main.rs
2019/day12a/: Cargo.toml
2019/day12a/src/: main.rs
2019/day12b/: Cargo.toml
2019/day12b/src/: main.rs
2019/day13a/: Cargo.toml
2019/day13a/src/: main.rs
2019/day13b/: Cargo.toml
2019/day13b/src/: main.rs
2019/day14a/: Cargo.toml
2019/day14b/: Cargo.toml
2019/day15a/: Cargo.toml
2019/day15b/: Cargo.toml
2019/day16a/: Cargo.toml
2019/day16b/: Cargo.toml
2019/day17a/: Cargo.toml
2019/intcptr/: Cargo.toml
helper/: Cargo.toml
helper/src/: lib.rs  point.rs
(+10 files in other folders)
