[workspace]

members = [
    "2015/day01a",
    "2015/day01b",
    "2015/day02a",
    "2015/day02b",
    "2019/day01a",
    "2019/day01b",
    "2019/day02a",
    "2019/day02b",
    "2019/day03a",
    "2019/day03b",
    "2019/day04a",
    "2019/day04b",
    "2019/day05a",
    "2019/day05b",
    "helper",
]
