[package]
name = "aoc2019day12a"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helper = { path = "../../helper" }
anyhow = "1.0.25"
regex = "1.3.1"
lazy_static = "1.4.0"
